Bug 99827 - UI : Auto Text dialog ( Tools --> Auto Text ) is blank
Summary: UI : Auto Text dialog ( Tools --> Auto Text ) is blank
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: bibisected, bisected, regression
: 100247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-13 13:59 UTC by Oswald Luc
Modified: 2016-09-20 15:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture with blank AutoText dialog Box (60.01 KB, image/png)
2016-05-13 13:59 UTC, Oswald Luc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oswald Luc 2016-05-13 13:59:04 UTC
Created attachment 125036 [details]
Screen capture with blank AutoText dialog Box

Blank AutoText dialog box as seen on screen capture,
with LibreOfficeDev :

Version: 5.2.0.0.alpha1+
Build ID: 65b327b873e67ae24133b6e4afef5e8a12ed822e
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2016-05-10_01:01:56
Locale: fr-FR (fr_FR.UTF-8)

Possible duplicate of https://bugs.documentfoundation.org/show_bug.cgi?id=91393
But this last one is marked "VERIFIED FIXED"
Comment 1 Buovjaga 2016-05-15 15:58:22 UTC
Repro.

Oswald: would you like to join the QA team? All info is here: https://wiki.documentfoundation.org/QA

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.0.alpha1+
Build ID: 1dbdc947fcc9d843764731e6dae7ce60082576e0
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 14th 2016
Comment 2 raal 2016-05-17 06:03:19 UTC
note: unable to bibisect with bibisect-win32-5.2 - tens of skipped commits
Comment 3 Julien Nabet 2016-05-27 08:39:27 UTC
On pc Debian x86-64 with master sources updated today + gtk3 render, I don't reproduce this.
But with gen and gtk render, I got a blank dialog for some seconds then it's ok.
I noticed this on console:
warn:fwk.dispatch:23046:1:framework/source/dispatch/loaddispatcher.cxx:132: caught LoadEnvException 0 "from LoadEnv::initializeLoading" while dispatching <private:factory/swriter>
Comment 4 Buovjaga 2016-05-27 08:58:24 UTC
With kde backend, it never turns ok. It captures whatever is behind it and leaves it as a frozen texture. CPU starts running hard.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 60041cb237ea73c2c1885dd6afd99d88780c2dfc
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 26th 2016
Comment 5 Michael Stahl 2016-06-01 13:32:29 UTC
current master on Fedora 23, can repro this with "gen" / "gtk" / "kde" but "gtk3" does work

except that the preview on the right side of the dialog is missing even with "gtk3"

bibisect result: c1b90fa342e09ab30068f6294fc866c63d7ae4c4 00cf864e5d317016d7224c199aa982d07bd70113

regression from:

commit 5334ff287c65f028753171c7b38da7ffbcebc1cc
Author:     Akash Jain <akash96j@gmail.com>
AuthorDate: Mon Apr 4 22:13:47 2016 +0530
Commit:     Stephan Bergmann <sbergman@redhat.com>
CommitDate: Tue Apr 5 07:00:56 2016 +0000

    tdf#98837 - Fail loading a new document with read only property set to true
    
    When opening a new document, via any API,  (URL: "private:factory/swriter")
    with read-only property set to true, Writer opens with a new document in
    edit mode. But the title still has (read-only) in it. Since a document can
    only open in read-only mode if it has been saved first, the loading of new
    documents with read-only property set to true will now fail.
Comment 6 Michael Stahl 2016-06-01 13:53:15 UTC
fixed on master
Comment 7 Commit Notification 2016-06-01 13:53:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a8407d82d71083c8bdec6a106ba9092a5196cbe

tdf#99827 sw: don't create AutoText dialog's preview doc ReadOnly

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-06-07 07:24:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=06235b5e79de9da786423ba3496b73d978a4e6c5&h=libreoffice-5-2

tdf#99827 sw: don't create AutoText dialog's preview doc ReadOnly

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2016-06-09 15:26:29 UTC
*** Bug 100247 has been marked as a duplicate of this bug. ***