tdf#99827 sw: don't create AutoText dialog's preview doc ReadOnly

Since commit 5334ff287c65f028753171c7b38da7ffbcebc1cc the framework
refuses to create new documents as ReadOnly, so don't do that.

Change-Id: I9d94ca9859baaf5407bad88a2b4b5b2e26b99b94